--- a/estilos.css
+++ b/estilos.css
@@ -4,12 +4,13 @@
     padding: 0;
 }
 .Header {
+    grid-area: header;
     padding: 0px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    background-color: #7e7e8d;
+    background-color:cadetblue;
   }
 
 
@@ -40,3 +41,33 @@ li:hover{
 ul {
     display: flex;
 }
+.container {  
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 150px 800px 400px 400px 150px;
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "Header Header"
+      "Hero Hero"
+      "Section-A Section-B"
+      "Section-C Section-D"
+      "Footer Footer";
+    width: 100%;
+    height: 100%;
+  }
+
+.Hero {
+    grid-template-columns: hero;
+    background-image: url("./img/hero.jpg");
+    background-size: cover;
+    background-position: center; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+
