--- a/estilos.css
+++ b/estilos.css
@@ -1,119 +1,134 @@
 
-*{
-    margin:0;
-    padding: 0;
+* {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
-.Header {
-    grid-area: header;
-    padding: 0px 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-    background-color:cadetblue;
-  }
 
-
-nav{
-    background-color: cadetblue;
-}
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 a:hover{
-    color: white;
+  color: white;
 }
 
 li {
-    list-style: none;
-    margin: 1rem;
-    padding: 0.5rem;
-    cursor: pointer;
+  list-style: none;
+  margin: 1rem;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+h1, h2 {
+  font-size: 2rem;
 }
 
 li:hover{
-    background-color: rgb(62, 74, 179);
-    
+  background-color: rgb(62, 74, 179);
+  
 }
 
 ul {
-    display: flex;
+  display: flex;
 }
-.container {  
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 150px 800px 400px 400px 150px;
-    grid-auto-columns: 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "Header Header"
-      "Hero Hero"
-      "Section-A Section-B"
-      "Section-C Section-D"
-      "Footer Footer";
-    width: 100%;
-    height: 100%;
-  }
-    
-  .Section-A {
-    background-image: url(./img/fondo.jpg);
-    grid-area: Section-A;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: end;
-    padding-right: 20rem;
-     }
-  
-  .Section-B { 
-    grid-area: Section-B;
-    background-image: url("./img/imagen1.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    }    
-  
-  .Section-C { 
-    grid-area: Section-C;
-    background-image: url("./img/Screenshot_20220127-205851_Google.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-     }
-  
-  .Section-D {
-    background-image: url(./img/fondo.jpg);
-    grid-area: Section-D;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    padding-left: 20rem;
-    }
 
+.container {  
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 150px 800px 400px 400px 150px;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "Header Header"
+    "Hero Hero"
+    "Section-A Section-B"
+    "Section-C Section-D"
+    "Footer Footer";
+  width: 100%;
+  height: 100%;
+}
 
 .Hero {
-    grid-template-columns: hero;
-    background-image: url("./img/hero.jpg");
-    background-size: cover;
-    background-position: center; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
-  .Footer { 
-    background-image: -moz-linear-radial(rgb(43, 43, 114) rgb(90, 90, 119));
-    grid-area: Footer;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+  grid-area: Hero;
+  background-image: url("./img/hero.jpg");
+  background-size: cover;
+  background-position: center; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
+h1 {
+    color: rgb(15, 13, 13);
+    font-size: 3rem;
+    text-shadow: rgb(228, 224, 224) 0.1rem 0.1rem 0.2rem;
+}
+
+button{
+  background-color: #3c3c86;
+  border: 0px;
+  padding: 1rem;
+  color:azure;
+  border-radius: 0.2rem;
+  margin-top: 0.5rem;
+}
+
+.Footer { 
+  background-image: -moz-linear-radial(rgb(43, 43, 114) rgb(90, 90, 119));
+  grid-area: Footer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Header { grid-area: Header;
+  padding: 0px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  background-color: #7e7e8d;
+}
+
+.Section-A {
+  background-image: url("./img/fondo.jpg");
+  grid-area: Section-A;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: end;
+  padding-right: 20rem;
+   }
+
+.Section-B { 
+  grid-area: Section-B;
+  background-image: url("./img/imagen1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  }    
+
+.Section-C { 
+  grid-area: Section-C;
+  background-image: url("./img/Screenshot_20220127-205851_Google.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+   }
+
+.Section-D {
+  background-image: url(./img/fondo.jpg);
+  grid-area: Section-D;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding-left: 20rem;
+  }
+  header{
+    background-image: radial-gradient(to left rgb(74, 74, 197), rgb(142, 142, 201));
+  }
 
